# tutorial_opencv

./: .gitignore  README.md
.ref site/: 참조사이트.md
tutorial_ex/: vscode_sys_variant.txt
tutorial_ex/001-open_usb_cam/: CMakeLists.txt
tutorial_ex/001-open_usb_cam/src/: find_cam.cpp  main.cpp
tutorial_ex/exam1/: CMakeLists.txt
tutorial_ex/exam1/src/: main.cpp
